--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+           
+            ]
           },
           "configurations": {
             "production": {
@@ -95,7 +97,10 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "my-first-project/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "my-first-project/node_modules/jquery/dist/jquery.min.js"
+            ]
           }
         }
       }
